Adding parallel test agents

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -21,13 +21,16 @@ SUBDIRLIST(SUBDIRS smurf-test/agents)
 FOREACH(subdir ${SUBDIRS})
     ADD_SUBDIRECTORY(${subdir})
 ENDFOREACH()
-
+CONFIGURE_FILE(smurf-test/scenarios.json ${CMAKE_BINARY_DIR}) # this will replace CMake variables in scenarios.json
 find_package(Python3 COMPONENTS Interpreter Development)
 message("Python_FOUND:${Python3_FOUND}")
 message("Python_VERSION:${Python3_VERSION}")
 message("Python_VERSION:${Python3_EXECUTABLE}")
 
-add_test(NAME sample_test COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/lib/StateSmurf/SmurfTestingScripts/CompareScenarios.py
-        -s ${CMAKE_CURRENT_SOURCE_DIR}/smurf-test/scenarios.json  -e ${CMAKE_BINARY_DIR}/modulog -C
+ADD_TEST(NAME ModulogTests COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/lib/StateSmurf/SmurfTestingScripts/CompareScenarios.py
+        -s ${CMAKE_BINARY_DIR}/scenarios.json
+        -e ${CMAKE_BINARY_DIR}/modulog
+        --evaluator ${CMAKE_BINARY_DIR}/lib/StateSmurf/SmurfEvaluator/smurfEvaluator
+        #-C
         WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/test/smurf-test)# ${EXECUTABLE_OUTPUT_PATH} )
 
