--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,8 @@ SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 OPTION(BRINGAUTO_TESTS "Tests" OFF)
 OPTION(BRINGAUTO_INSTALL "Install" OFF)
 OPTION(BRINGAUTO_PACKAGE "Create package" OFF)
+OPTION(STATESMURF_TESTS "Testing library StateSmurf" OFF)
+
 IF(BRINGAUTO_TESTS)
     ADD_COMPILE_DEFINITIONS(BRINGAUTO_TESTS=1) # if this macro defined, SmurfState library included in modulog
     IF(BRINGAUTO_PACKAGE OR BRINGAUTO_INSTALL)
