--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,30 +1,29 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
 PROJECT(Tests)
-# GoogleTest requires at least C++11
 SET(CMAKE_CXX_STANDARD 17)
 
 MACRO(SUBDIRLIST result curdir)
     FILE(GLOB children ${curdir}/*)
     SET(dirlist "")
-    FOREACH(child ${children})
-        IF(IS_DIRECTORY ${child})
+    FOREACH (child ${children})
+        IF (IS_DIRECTORY ${child})
             LIST(APPEND dirlist ${child})
-        ENDIF()
-    ENDFOREACH()
+        ENDIF ()
+    ENDFOREACH ()
     SET(${result} ${dirlist})
 ENDMACRO()
 
 
 ENABLE_TESTING()
 SUBDIRLIST(SUBDIRS smurf-test/agents)
-FOREACH(subdir ${SUBDIRS})
+FOREACH (subdir ${SUBDIRS})
     ADD_SUBDIRECTORY(${subdir})
-ENDFOREACH()
+ENDFOREACH ()
 CONFIGURE_FILE(smurf-test/scenarios.json ${CMAKE_BINARY_DIR}) # this will replace CMake variables in scenarios.json
-find_package(Python3 COMPONENTS Interpreter Development)
-message("Python_FOUND:${Python3_FOUND}")
-message("Python_VERSION:${Python3_VERSION}")
-message("Python_VERSION:${Python3_EXECUTABLE}")
+FIND_PACKAGE(Python3 COMPONENTS Interpreter Development)
+MESSAGE("Python_FOUND:${Python3_FOUND}")
+MESSAGE("Python_VERSION:${Python3_VERSION}")
+MESSAGE("Python_VERSION:${Python3_EXECUTABLE}")
 
 ADD_TEST(NAME ModulogTests COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/lib/StateSmurf/SmurfTestingScripts/CompareScenarios.py
         -s ${CMAKE_BINARY_DIR}/scenarios.json
