Working watchdog prototype

--- a/agents/udp-watchdog-agent/config.json
+++ b/agents/udp-watchdog-agent/config.json
@@ -1,7 +1,7 @@
 {
   "id": "udp-watchdog-agent",
   "port": 6127,
-  "checkInterval": 3,
+  "checkoutInterval": 3,
   "devices": [
     "GREENBUTTON1",
     "GREENBUTTON2",
