--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,8 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
-INCLUDE(FetchContent)
 PROJECT(modulog)
 
 # for linking .so after make install (we have ba_logger):
-SET(CMAKE_SKIP_BUILD_RPATH  FALSE)
+SET(CMAKE_SKIP_BUILD_RPATH FALSE)
 SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
 SET(CMAKE_INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
 SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
@@ -13,18 +12,18 @@ OPTION(BRINGAUTO_INSTALL "Install" OFF)
 OPTION(BRINGAUTO_PACKAGE "Create package" OFF)
 OPTION(STATESMURF_TESTS "Testing library StateSmurf" OFF)
 
-IF(BRINGAUTO_TESTS)
+IF (BRINGAUTO_TESTS)
     ADD_COMPILE_DEFINITIONS(BRINGAUTO_TESTS=1) # if this macro defined, SmurfState library included in modulog
-    IF(BRINGAUTO_PACKAGE OR BRINGAUTO_INSTALL)
+    IF (BRINGAUTO_PACKAGE OR BRINGAUTO_INSTALL)
         MESSAGE(FATAL_ERROR "You cannot install or create package with BRINGAUTO_TESTS enabled")
-    ENDIF()
-ENDIF()
-IF(BRINGAUTO_PACKAGE)
-    IF(NOT BRINGAUTO_INSTALL)
+    ENDIF ()
+ENDIF ()
+IF (BRINGAUTO_PACKAGE)
+    IF (NOT BRINGAUTO_INSTALL)
         MESSAGE(WARNING "BRINGAUTO_PACKAGE is ON, so BRINGAUTO_INSTALL is also ON")
         SET(BRINGAUTO_INSTALL ON)
-    ENDIF()
-ENDIF()
+    ENDIF ()
+ENDIF ()
 
 
 SET(CMAKE_CXX_STANDARD 17)
@@ -43,24 +42,23 @@ ADD_SUBDIRECTORY(agent-client)
 ADD_SUBDIRECTORY(agents)
 
 
-# ------------ linking
+TARGET_LINK_LIBRARIES(modulog CoreLib cxxopts)
 
-TARGET_LINK_LIBRARIES(modulog CoreLib)
-IF(BRINGAUTO_TESTS)
+IF (BRINGAUTO_TESTS)
     ENABLE_TESTING()
     ADD_SUBDIRECTORY(lib/StateSmurf)
     ADD_SUBDIRECTORY(test)
-ENDIF()
+ENDIF ()
 
-IF(BRINGAUTO_INSTALL)
+IF (BRINGAUTO_INSTALL)
     INSTALL(TARGETS modulog DESTINATION .)
     INSTALL(FILES ${AG_BUILT_LIST} DESTINATION .)
-ENDIF()
+ENDIF ()
 
-IF(BRINGAUTO_PACKAGE)
+IF (BRINGAUTO_PACKAGE)
     SET(CPACK_GENERATOR ZIP)
     SET(CPACK_PACKAGE_CONTACT "Martin Hofbauer <martin.hofbauer@bringauto.com>")
     SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Martin Hofbauer <martin.hofbauer@bringauto.com>")
     SET(CPACK_PACKAGE_VERSION ${modulog_VERSION})
     INCLUDE(CPack)
-ENDIF()
+ENDIF ()
