--- a/agents/linux-system-monitoring-lib-agent/config.json
+++ b/agents/linux-system-monitoring-lib-agent/config.json
@@ -2,5 +2,6 @@
   "id": "linux-system-monitoring-lib-agent",
   "cpuNotBiggerThanPercent": 5,
   "ramNotBiggerThanPercent": 30,
-  "logInterval": 4
+  "logInterval": 4,
+  "statLocation": "/proc/stat"
 }
