adding space agent

--- a/agents/space-agent/config.json
+++ b/agents/space-agent/config.json
@@ -1,5 +1,7 @@
 {
   "id": "space-agent",
   "logInterval": 5,
-  "folderToMonitor": "/dev/nvme0n1"
+  "availableNotSmallerThanPercent": 70,
+  "foldersToMonitor": ["/home"],
+  "partitionsToMonitor": ["/dev/nvme0n1p2", "/dev/nvme0n1p4"]
 }
