--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -1,7 +1,10 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
 SET(CMAKE_CXX_STANDARD 17)
 
-file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/logs") # default folder for logs
+FILE(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/logs") # default folder for logs
+IF(BRINGAUTO_INSTALL)
+    INSTALL(DIRECTORY DESTINATION "logs")
+ENDIF()
 
 FILE(GLOB_RECURSE source_files "src/*")
 ADD_LIBRARY(CoreLib ${source_files})
