--- a/meta-lib/CMakeLists.txt
+++ b/meta-lib/CMakeLists.txt
@@ -11,5 +11,4 @@ IF(BRINGAUTO_TESTS)
     TARGET_LINK_LIBRARIES(MetaLib PUBLIC DiagramSmurfLib TransitionSmurfLib)
 ENDIF()
 
-#TARGET_LINK_LIBRARIES(MetaLib PUBLIC ${BRINGAUTO_LOGGER_TO_LINK})
-TARGET_LINK_LIBRARIES(MetaLib PUBLIC bringauto_logger::bringauto_logger)
+TARGET_LINK_LIBRARIES(MetaLib PUBLIC ${BRINGAUTO_LOGGER_TO_LINK})
