--- a/agents/CMakeLists.txt
+++ b/agents/CMakeLists.txt
@@ -1,5 +1,5 @@
 # What will be compiled:
-FILE(READ ../agents-to-compile.json TO_COMPILE_JSON) # do not change to CMAKE_SOURCE_DIR, modulog is built by external CMAKE projects and it doesnt work
+FILE(READ ${PROJECT_SOURCE_DIR}/agents-to-compile.json TO_COMPILE_JSON)
 STRING(JSON AGENTS_COUNT LENGTH ${TO_COMPILE_JSON} agentsToCompile)
 MATH(EXPR AGENTS_COUNT "${AGENTS_COUNT}-1") # Decrementing by one - foreach needs number (count-1)
 FILE(REMOVE ${AG_BUILT_LIST}) # list of built agents is deleted - now we can start appending
@@ -9,7 +9,7 @@ FOREACH (IDX RANGE ${AGENTS_COUNT})
     STRING(JSON AG_ENABLED GET ${TO_COMPILE_JSON} agentsToCompile ${IDX} enabled)
     IF (${AG_ENABLED})
         GET_FILENAME_COMPONENT(AG_NAME ${AG_PATH} NAME)
-        ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/${AG_PATH}) # paths in agents-to-compile.json are relative from its destination
+        ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/${AG_PATH}) # paths in agents-to-compile.json are relative from its destination
         ADD_DEPENDENCIES(modulog ${AG_NAME}) # Agent target has same name as its folder
         FILE(APPEND ${AG_BUILT_LIST} ${AG_PATH} "\n")
 
