--- a/agents/CMakeLists.txt
+++ b/agents/CMakeLists.txt
@@ -3,6 +3,8 @@ FILE(READ ${CMAKE_SOURCE_DIR}/agents-to-compile.json TO_COMPILE_JSON)
 STRING(JSON AGENTS_COUNT LENGTH ${TO_COMPILE_JSON} agentsToCompile)
 MATH(EXPR AGENTS_COUNT "${AGENTS_COUNT}-1") # Decrementing by one - foreach needs number (count-1)
 FILE(REMOVE ${AG_BUILT_LIST}) # list of built agents is deleted - now we can start appending
+FILE(APPEND ${AG_BUILT_LIST} "") # create empty file
+
 FOREACH (IDX RANGE ${AGENTS_COUNT})
     # Get the name from the current JSON element.
     STRING(JSON AG_PATH GET ${TO_COMPILE_JSON} agentsToCompile ${IDX} agentPath)
